--- a/Dockerfile.CUDA
+++ b/Dockerfile.CUDA
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:8.0-runtime-ubuntu16.04 AS runtime
+FROM nvidia/cuda:8.0-cudnn7-runtime-ubuntu16.04 AS runtime
 
 RUN apt update && apt install -y procps libcurl4 libicu63 libatomic1 libopenblas-base && apt clean
 
