--- a/Dockerfile.CUDA
+++ b/Dockerfile.CUDA
@@ -18,13 +18,11 @@ FROM runtime AS final
 
 COPY --from=build /usr/lib/x86_64-linux-gnu/libboost* /usr/lib/x86_64-linux-gnu/
 
-COPY --from=build /app/build/bin /app/
+COPY --from=build /app/build/bin/libdynet.so /usr/local/lib/
+COPY --from=build /app/build/bin/lstmsdparser /app/
 
 WORKDIR /app
 
-# You can use the container with:
-# docker run -ti --rm --gpus all lstmsdparser:latest
+RUN ldconfig
 
 CMD ["./lstmsdparser"]
-
-ENTRYPOINT [ "/bin/bash" ]
