--- a/Dockerfile.CUDA
+++ b/Dockerfile.CUDA
@@ -25,4 +25,7 @@ WORKDIR /app
 
 RUN ldconfig
 
+# You can use the container with:
+# docker run -ti --rm --gpus all lstmsdparser:latest
+
 CMD ["lstmsdparser"]
