--- a/Dockerfile.CUDA
+++ b/Dockerfile.CUDA
@@ -18,7 +18,7 @@ FROM runtime AS final
 
 COPY --from=build /usr/lib/x86_64-linux-gnu/libboost* /usr/lib/x86_64-linux-gnu/
 
-COPY --from=build /app/build/bin/libdynet.so /usr/local/lib/
+COPY --from=build /app/build/bin/*.so /usr/local/lib/
 COPY --from=build /app/build/bin/lstmsdparser /usr/local/bin/
 
 WORKDIR /app
